--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+:root {
+	--blue: #5f93e8;
+}
+
 h1 {
-	text-align: center;
 	font-family: 'Roboto', sans-serif;
+	text-align: center;
 }
 
 .robots {
@@ -15,7 +19,7 @@ h1 {
 .right_arm, 
 .left_leg, 
 .right_leg {
-	 background-color: #5f93e8;
+	 background-color: var(--blue);
 }
 
 
@@ -86,6 +90,24 @@ background-color: white;
 	width: 200px;
 	height: 200px;
 	border-radius: 0px 0px 50px 50px;
+}
+
+.left_arm:hover {
+	-webkit-transform: rotate(15deg);
+    -moz-transform: rotate(15deg);
+    -o-transform: rotate(15deg);
+    -ms-transform: rotate(15deg);
+    transform: rotate(15deg);
+	
+}
+
+.right_arm:hover {
+	-webkit-transform: rotate(-15deg);
+    -moz-transform: rotate(-15deg);
+    -o-transform: rotate(-15deg);
+    -ms-transform: rotate(-15deg);
+    transform: rotate(-15deg);
+	
 }
 
 
